LayoutTests/js/script-tests/object-literal-shorthand-construction.js
@@ -108,3 +108,8 @@ shouldBeTrue("({get 42(){ return true; }})['42']");
 shouldBeTrue("!!Object.getOwnPropertyDescriptor({set x(value){}}, 'x').set");
 shouldBeTrue("!!Object.getOwnPropertyDescriptor({set 'x'(value){}}, 'x').set");
 shouldBeTrue("!!Object.getOwnPropertyDescriptor({set 42(value){}}, '42').set");
+
+// __proto__ shorthand should be not modify the prototype.
+shouldBeTrue("__proto__ = []; ({__proto__: __proto__}) instanceof Array");
+shouldBeFalse("__proto__ = []; ({__proto__}) instanceof Array");
+shouldBeTrue("__proto__ = []; ({__proto__}).__proto__ instanceof Array");
